--- a/mail.html
+++ b/mail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -111,20 +111,20 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="https://bautistaleguizamon.github.io/supreme/index.html"> 
+            <a href="https://vicente-crypto.github.io/100-Sastre/">
                 <h1 style="color: #333333; font-size: 24px; margin: 0;">
-                    <img src="https://vicente-crypto.github.io/ferrarioficial/imagenes/logoferrari.png" alt="Logo Supreme">
-                </h1>  
+                    <img src="https://vicente-crypto.github.io/100-Sastre/imagenes/logoferrari.png" alt="Logo Supreme">
+                </h1>
             </a>
         </div>
 
         <div class="two-column">
             <div class="column">
-                <img src="https://vicente-crypto.github.io/ferrarioficial/imagenes/ferrarisf90stradale.jpg" alt="Producto 1">
+                <img src="https://vicente-crypto.github.io/100-Sastre/imagenes/ferrarisf90stradale.jpg" alt="Producto 1">
                 <h2>Ferrari SF90 stradele</h2>
                 <p>Un superdeportivo híbrido con 1000 CV, diseñado para ofrecer una experiencia de conducción extrema.</p>
             </div>
-            
+
             <div class="column">
                 <img src="imagenes/ferrariroma.jpg" alt="Producto 2">
                 <h2>Ferrari Roma</h2>
@@ -142,9 +142,10 @@
 
         <div class="footer">
             <p>&copy; Si deseas más información sobre nuestros vehículos o realizar una prueba de manejo, contáctanos a través de nuestro correo: info@ferrari.com o síguenos en nuestras redes sociales.</p>
-		    
-            <p><a href="https://www.instagram.com/direct/t/104166817642782">Contáctanos</a> 
+
+            <p><a href="https://www.instagram.com/direct/t/104166817642782">Contáctanos</a>
 			</p>
         </div></div></div>
 </body>
 </html>
+
